<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/relLayout1"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_registration"
                        android:textSize="25sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:id="@+id/textEmailReg"/>


                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:layout_below="@+id/textEmailReg"/>


                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:layout_below="@+id/register_email"/>

                    <EditText
                        android:id="@+id/register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:layout_below="@+id/register_password"/>


                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:layout_below="@+id/register_confirm_password"
                        android:text="@string/register" />


                    <com.google.android.gms.common.SignInButton
                        android:layout_below="@+id/btn_register"
                        android:layout_margin="50dp"
                        android:id="@+id/btnGoogleSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>





            </RelativeLayout>
        </ScrollView>



    </RelativeLayout>
</layout>
